[package]
name = "advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cached = "0.46.1"
http = {version = "1.0.0"}
indexmap = "2.1.0"
itertools = "0.12.0"
pathfinding = "4.8.0"
priority-queue = "1.3.2"
rayon = "1.8.0"
regex = "1.10.2"
reqwest = {version = "0.11.22", features=["cookies"]}
str-distance = "0.1.0"
tokio = {version = "1.34.0", features = ["full"]}
